[workspace]
members = ["crates/*"]

[workspace.dependencies]
futures-util = "0.3"
http = "1.2"
http-body = "1.0"
http-body-util = "0.1.2"
hyper = "1.6"
insecure-reverse-proxy = { version = "0.1.0", path = "./crates/insecure-reverse-proxy" }
tokio = { version = "1.43" }
tower = "0.5.2"
tracing = "0.1.41"

[package]
name = "tower-webdev"
version = "0.1.0"
edition = "2021"

[dependencies]
bytes = "1.10"
fs_extra = "1.3.0"
futures-util.workspace = true
http.workspace = true
http-body.workspace = true
http-body-util.workspace = true
hyper.workspace = true
insecure-reverse-proxy.workspace = true
pin-project = "1.1.10"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
tempfile = "3.17"
tokio = { workspace = true, features = ["fs", "process"] }
tower.workspace = true
tower-http = { version = "0.6.1", features = [
  "trace",
  "catch-panic",
  "timeout",
  "add-extension",
  "cors",
  "fs",
  "set-header",
  "compression-full",
] }
tracing.workspace = true

[dev-dependencies]
axum = "0.8.1"
tokio = { version = "1.43", features = ["full"] }
tracing-subscriber = { version = "0.3.17", features = ["env-filter", "json"] }
