[package]
name = "insecure-reverse-proxy"
version = "0.1.0"
edition = "2021"
description = "A simple reverse proxy service for tower based off hyper-reverse-proxy."
license-file = "./LICENSE.hyper-reverse-proxy"

[dependencies]
futures-util.workspace = true
http.workspace = true
http-body.workspace = true
http-body-util.workspace = true
hyper = { workspace = true, features = ["client"] }
hyper-util = { version = "0.1.1", features = [
  "client-legacy",
  "http1",
  "tokio",
] }
tokio = { workspace = true, features = ["io-util"] }
tower.workspace = true
tracing.workspace = true

[dev-dependencies]
axum = "0.8.1"
tokio = { version = "1.43", features = ["full"] }
tracing-subscriber = { version = "0.3.17", features = ["env-filter", "json"] }
